docs: add informações do trabalho

--- a/src/br/furb/algdados/htmlvalidator/views/MainView.form
+++ b/src/br/furb/algdados/htmlvalidator/views/MainView.form
@@ -56,6 +56,9 @@
               <showVerticalLines value="false"/>
               <updateSelectionOnSort value="true"/>
             </properties>
+            <clientProperties>
+              <html.disable class="java.lang.Boolean" value="true"/>
+            </clientProperties>
           </component>
         </children>
       </scrollpane>
